--- a/ClothBazar.Web/Views/Category/Index.cshtml
+++ b/ClothBazar.Web/Views/Category/Index.cshtml
@@ -18,3 +18,10 @@
     </div>
 
 </div>
+<script>
+    function focusAction(focusDiv) {
+        $("html, body").animate({
+            scrollTop: $("#" + focusDiv).offset().top - 100
+        }, 1000);
+    }
+</script>
