--- a/ClothBazar.Web/Views/Product/Create.cshtml
+++ b/ClothBazar.Web/Views/Product/Create.cshtml
@@ -45,6 +45,7 @@
     </div>
 
     <button type="button" id="createBtn" class="btn btn-danger">Save</button>
+    <button type="button" id="btnCancel" class="btn btn-danger">Cancel</button>
 </form>
 
 
@@ -89,11 +90,16 @@
             .done(function (response) {
                 $("#tableCont").html(response);
                 $("#actionCont").html("");
+                focusAction("tableCont");
             })
             .fail(function (XMLHttpRequest, textStatus, errorThrown) {
                 alert("Fail");
             });
     });
 
+    $("#btnCancel").click(function () {
+        $("#actionCont").html("");
+        focusAction("tableCont");
+    });
 </script>
  
