--- a/ClothBazar.Web/Views/Shared/_Layout.cshtml
+++ b/ClothBazar.Web/Views/Shared/_Layout.cshtml
@@ -1,7 +1,4 @@
-﻿@{ 
-   ConfigurationsService configurationsService = new ConfigurationsService();
-}
-
+﻿
 <!DOCTYPE html>
 <html>
 <head>
@@ -100,6 +97,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="/Category/Index"> Categories </a></li>
+                                <li><a href="/Configuration/Index"> Configuration </a></li>
                                 <li><a href="/Product/Index"> Products </a></li>
                                 <li>
                                     <a href="shop-3col.html">SHOP</a>
@@ -238,8 +236,8 @@
                                 <a href="index.html"><img src="~/Content/images/logo@2x.png" alt="image" width="107" height="24"></a>
                             </div>
                             <ul class="flat-contact">
-                                <li class="address">configurationsService.GetConfig("MobileNo")</li>
-                                <li class="phone">@configurationsService.GetConfigurationByKey("Company Mobile No").Value</li>
+                                <li class="address">Demo Address , India</li>
+                                <li class="phone">@ConfigurationsService.Instance.GetConfigurationByKey("Mobile Number").Value</li>
                                 <li class="email">infor.deercreative@gmail.com</li>
                             </ul><!-- /.flat-contact -->
                         </div><!-- /.widget -->
